meson: fix name of output executable mmbuild -> mmdoc

--- a/src/meson.build
+++ b/src/meson.build
@@ -9,9 +9,8 @@ shared_lib = static_library('shared', src, dependencies : [
                               asset_dep, libcmark_gfm, libfastjson, libzip
                             ])
 
-mmbuild = executable('mmbuild',
+mmdoc = executable('mmdoc',
                      [ 'mmdoc.c' ],
                      install : true,
                      pie : true,
                      link_with : [ shared_lib ])
-
