doc: fix github-pages output directory to use

--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -20,6 +20,6 @@ jobs:
         uses: crazy-max/ghaction-github-pages@v2
         with:
           target_branch: gh-pages
-          build_dir: out
+          build_dir: out/multi
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
