feature: dark mode in multi and restyle

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 src/asset/fuse.basic.min.js linguist-vendored
 src/asset/highlight.pack.js linguist-vendored
-src/asset/mono-blue.css linguist-vendored
+src/asset/a11y-light.css linguist-vendored
+src/asset/a11y-dark.css linguist-vendored
